--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-twitter-widgets": "^1.11.0",
     "recharts": "^2.6.2"
   },
   "devDependencies": {
