--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/recharts": "^1.8.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-twitter-widgets": "^1.11.0",
     "recharts": "^2.6.2"
   },
