--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test-client": "npm run test --prefix client"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
