--- a/.github/workflows/run-unit-tests-and-build.yml
+++ b/.github/workflows/run-unit-tests-and-build.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests
+name: Run Unit Tests and Build
 
 on:
   push:
@@ -17,4 +17,6 @@ jobs:
       - run: npm ci
         working-directory: ./client
       - run: npm run test
+        working-directory: ./client
+      - run: npm run build
         working-directory: ./client
