--- a/.github/workflows/run-unit-tests-and-build.yml
+++ b/.github/workflows/run-unit-tests-and-build.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  build-and-test:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +17,15 @@ jobs:
       - run: npm ci
         working-directory: ./client
       - run: npm run test
+        working-directory: ./client
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - run: npm ci
         working-directory: ./client
       - run: npm run build
         working-directory: ./client
