--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@supabase/supabase-js": "^2.24.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
