--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "prettier": "2.8.8",
-    "supabase": "^1.74.2"
+    "prettier": "2.8.8"
   }
 }
