--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@react-three/drei": "^9.88.10",
+    "@react-three/fiber": "^8.15.9",
     "@types/recharts": "^1.8.24",
+    "@types/three": "^0.158.1",
     "nostr-tools": "^1.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.13.0",
     "react-twitter-widgets": "^1.11.0",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
