added swap feature and route

--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.16",
     "@react-three/drei": "^9.88.10",
     "@react-three/fiber": "^8.15.9",
+    "@swapkit/sdk": "^1.0.0-rc.45",
     "@types/recharts": "^1.8.24",
     "@types/three": "^0.158.1",
     "nostr-tools": "^1.17.0",
