--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@supabase/supabase-js": "^2.24.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moralis": "^2.23.2",
     "node-fetch": "^3.3.1",
     "redis": "^4.6.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "prettier": "2.8.8"
   }
 }
