--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.24.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jose": "^5.1.3",
     "moralis": "^2.23.2",
     "node-fetch": "^3.3.1",
     "redis": "^4.6.7"
