--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "prettier": "2.8.8"
+  },
+  "engines": {
+    "node": ">=20.9.0 <21.0.0"
   }
 }
